--- a/_posts/2013-05-10-makercamp.html
+++ b/_posts/2013-05-10-makercamp.html
@@ -11,9 +11,37 @@ section: techcenter
   <h2>MakerCamp</h2>
 	<div class="row-fluid">
 		<div class="bios">
+			<div class="span3">
+			<img src="img/makercamp.jpg" />
+			</div>
+			<div class="span9 bioright getinvolved">
+				<p>Digital Harbor Foundation is proud to present (in partnership with <a href="http://www.makered.org/" target="_blank">MakerEd</a> and their sponsors: <a href="http://www.cognizant.com/" target="_blank">Cognizant</a>, <a href="http://www.intel.com/" target="_blank">Intel</a>, <a href="http://oreilly.com/" target="_blank">O’Reilly</a>, and <a href="http://www.pixar.com/" target="_blank">Pixar</a>) the DHF MakerCamp 2013.  This summer camp at the Digital Harbor Foundation Tech Center will offer a half-day camp to students between the ages of 7-10 (Nano Makers) and 13-17 (Mega Makers). Extended hours (until 5pm) available.</p>
+			</div>
+		</div>
+	</div>
+
+
+  <h2>Apply for a Scholarship:</h2>
+
+	<div class="row-fluid">
+		<div class="bios right">
+			<div class="span9 bioleft getinvolved">
+
+<p>We strongly believe that every child should have the opportunity to attend this camp. Thanks to our sponsors, we are pleased to announce that DHF is able to provide scholarship assistance to any and all prospective campers with financial need.  Please fill out the form (link below) to apply for a scholarship. *One form must be completed per child.</p>
+				<p><a href="http://dhf-files.s3.amazonaws.com/Scholarship_Form.pdf" target="_blank">Interested in getting a scholarship? Apply here!</a></p>
+			</div>
+			<div class="span3">
+			<img src="img/scholarship.jpg" />
+			</div>
+		</div>
+	</div>
+
+	<div class="row-fluid">
+		<div class="bios">
 			<div class="span15 bioright">
 				<h3>Circuit Adventures<span>&nbsp;</span></h3>
 				<p>June 17 - June 28</p>
+<p>In this session, Circuit Adventures, students will get a chance to learn more about circuits and create lamps, flying propellers, moving motors and musical projects.  Nano Campers will explore “squishy” circuits using play-doh while Mega Campers will learn how to create their own projects using Arduinos.</p>
 				<div style="width:600px; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=4837273415&ref=etckt&v=2" frameborder="0" height="300px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets Online</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
 			</div>
@@ -26,6 +54,7 @@ section: techcenter
 			<div class="span15 bioright">
 				<h3>Digital Design & Fabrication <span>&nbsp;</span></h3>
 				<p>July 08 - July 19</p>
+<p>In this session, Digital Design and Fabrication, students will explore 3D design and learn how to digitally design objects that will then be created in the real world using vinyl cutters, legos, and 3D Printers.</p>
 				<div style="width:600px; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=6612591439&ref=etckt&v=2" frameborder="0" height="300px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Online Ticketing</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://makercamp2.eventbrite.com?ref=etckt">Digital Design & Fabrication >-</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
 			</div>
@@ -38,6 +67,7 @@ section: techcenter
 			<div class="span15 bioright">
 				<h3>Game Development <span>&nbsp;</span></h3>
 				<p>July 22 - August 02</p>
+<p>In this session, Game Development, students won't just play games -- they will make their own! Learn how to code a computer of mobile digital game. Students in the Nano Camp will learn how to create computer games and their own game controller while students in the Mega Camp will create mobile games.</p>
 				<div style="width:600px; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=6612625541&ref=etckt&v=2" frameborder="0" height="300px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
 			</div>
@@ -50,6 +80,7 @@ section: techcenter
 			<div class="span15 bioright">
 				<h3>Aerial Pursuits <span>&nbsp;</span></h3>
 				<p>August 5 - August 16</p>
+<p>In this session, Aerial Pursuits, students will experience the principles of flight as you explore rocketry, paper planes, remote controlled aircraft, and UAVs (unmanned aerial vehicles).</p>
 				<div style="width:600px; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=6612639583&ref=etckt&v=2" frameborder="0" height="300px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets Online</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
 			</div>
