--- a/_posts/2013-05-10-techcenter.html
+++ b/_posts/2013-05-10-techcenter.html
@@ -8,7 +8,23 @@ section: techcenter
 
 <div class="fellows">
 
+  <h2>The Story of the DHF Tech Center:</h2>
+
+	<div class="row-fluid">
+		<div class="bios right">
+			<div class="span9 bioleft getinvolved">
+				<h3>Rec<span>2</span>Tech</h3>
+				<p>The South Baltimore Recreation Center was slated by the Mayor of Baltimore to close it's doors in 2012. The Digital Harbor Foundation, however, had a vision of transformation through which an old rec center could become a tech center. The process of transforming the space, dubbed Rec2Tech, gave birth to the Digital Harbor Foundation Tech Center. Since our launch in January 2013, we have seen the ideas born here spread throughout the country as other similar spaces seek to reinvigorate their offerings to the community. <!-- Read all about the transformation by visiting <a href="http://www.rec2tech.org" target="_blank">rec2tech.org</a> --> </p>
+			</div>
+			<div class="span3">
+			<img src="img/dhftc.jpg" />
+			</div>
+		</div>
+	</div>
+
+
   <h2>What happens at the DHF Tech Center?</h2>
+
 	<div class="row-fluid">
 		<div class="bios">
 			<div class="span3">
