fixed bad ascii in makercamp post

--- a/_posts/2013-05-10-makercamp.html
+++ b/_posts/2013-05-10-makercamp.html
@@ -15,7 +15,7 @@ section: techcenter
 			<img src="img/makercamp.jpg" />
 			</div>
 			<div class="span9 bioright getinvolved">
-				<p>Digital Harbor Foundation is proud to present (in partnership with <a href="http://www.makered.org/" target="_blank">MakerEd</a> and their sponsors: <a href="http://www.cognizant.com/" target="_blank">Cognizant</a>, <a href="http://www.intel.com/" target="_blank">Intel</a>, <a href="http://oreilly.com/" target="_blank">O’Reilly</a>, and <a href="http://www.pixar.com/" target="_blank">Pixar</a>) the DHF MakerCamp 2013.  This summer camp at the Digital Harbor Foundation Tech Center will offer a half-day camp to students between the ages of 7-10 (Nano Makers) and 13-17 (Mega Makers). Extended hours (until 5pm) available.</p>
+				<p>Digital Harbor Foundation is proud to present (in partnership with <a href="http://www.makered.org/" target="_blank">MakerEd</a> and their sponsors: <a href="http://www.cognizant.com/" target="_blank">Cognizant</a>, <a href="http://www.intel.com/" target="_blank">Intel</a>, <a href="http://oreilly.com/" target="_blank">O?Reilly</a>, and <a href="http://www.pixar.com/" target="_blank">Pixar</a>) the DHF MakerCamp 2013.  This summer camp at the Digital Harbor Foundation Tech Center will offer a half-day camp to students between the ages of 7-10 (Nano Makers) and 13-17 (Mega Makers). Extended hours (until 5pm) available.</p>
 			</div>
 		</div>
 	</div>
@@ -41,7 +41,7 @@ section: techcenter
 			<div class="span15 bioright">
 				<h3>Circuit Adventures<span>&nbsp;</span></h3>
 				<p>June 17 - June 28</p>
-<p>In this session, Circuit Adventures, students will get a chance to learn more about circuits and create lamps, flying propellers, moving motors and musical projects.  Nano Campers will explore “squishy” circuits using play-doh while Mega Campers will learn how to create their own projects using Arduinos.</p>
+<p>In this session, Circuit Adventures, students will get a chance to learn more about circuits and create lamps, flying propellers, moving motors and musical projects.  Nano Campers will explore ?squishy? circuits using play-doh while Mega Campers will learn how to create their own projects using Arduinos.</p>
 				<div style="width:600px; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=4837273415&ref=etckt&v=2" frameborder="0" height="300px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Sell Tickets Online</a> <span style="color:#ddd;">through</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
 			</div>
