made the navigation bar and footer responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Digital Harbor Foundation
 
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
-	    <div class="navmission"><a href="#">Digital Harbor Foundation</a></div>
+	    <div class="navmission hidden-phone"><a href="#">Digital Harbor Foundation</a></div>
     <div class="container">
       <!-- Everything you want hidden at 940px or less, place within here -->
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
@@ -85,7 +85,7 @@ title: Digital Harbor Foundation
   {% endfor %}  
 </div>
 
-  <div id="footer">
+  <div id="footer visible-desktop">
     <a href="https://www.github.com/codeforamerica/annual" target="_blank">Code forked from Code For America</a> | <a href="http://www.stemengine.org" target="_blank">Powered by STEM Engine</a> | <a href="http://www.madewithloveinbaltimore.org" target="_blank">Made with &hearts; in Baltimore</a>
   </div>
 
