--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@ title: Digital Harbor Foundation
 <a class="brand" href="#"><img class="dhflogo" src="img/dhflogo.png" alt="DHF logo" /></a>
 </div>
 
-
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
-	    <div class="navmission"><a href="#">Digital Harbor Foundation</a></div>
-    <div class="container">
+	     <div class="container">
       <!-- Everything you want hidden at 940px or less, place within here -->
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -28,8 +26,8 @@ title: Digital Harbor Foundation
 
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
-          <!--<li class="navmission"><a href="#">Digital Harbor Foundation</a></li>-->
-          <li class="nav"><a href="#">:::</a></li>
+          <li class="navmission"><a href="#">Digital Harbor Foundation</a></li>
+          <li class="nav"><a style="color:#999">:::</a></li>
           <li class="navtechcenter"><a href="#">Tech Center</a></li>
           <!-- <li class="navmakercamp"><a href="#">MakerCamp</a></li> -->
           <li class="navblog"><a href="#">Blog</a></li>
@@ -86,7 +84,7 @@ title: Digital Harbor Foundation
 </div>
 
   <div id="footer">
-    <a href="https://www.github.com/codeforamerica/annual" target="_blank">Code forked from Code For America</a> | <a href="http://www.stemengine.org" target="_blank">Powered by STEM Engine</a> | <a href="http://www.madewithloveinbaltimore.org" target="_blank">Made with &hearts; in Baltimore</a>
+    <a href="https://www.github.com/codeforamerica/annual" target="_blank">HTML forked from Code For America</a> <!-- | <a href="http://www.stemengine.org" target="_blank">Powered by STEM Engine</a> -->| <a href="http://www.madewithloveinbaltimore.org" target="_blank">Made with &hearts; in Baltimore</a>
   </div>
 
 <!--
